change suggestion dropdown to ContextOverlay element, this fixes overflow problems with parent containers

--- a/src/components/AutoSuggestion/AutoSuggestion.scss
+++ b/src/components/AutoSuggestion/AutoSuggestion.scss
@@ -8,7 +8,7 @@
         // TODO: Replace by variable
         background-color: #fff;
         position: absolute;
-        top: $eccgui-size-textfield-height-regular;
+        top: 0;
         z-index:2;
         display: flex;
         flex-flow: column wrap;
